--- a/index.html
+++ b/index.html
@@ -57,58 +57,47 @@ https://templatemo.com/tm-552-video-catalog
                 <main>
                     <div class="row tm-catalog-item-list">
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-                            <div class="position-relative tm-thumbnail-container">
-                                <img src="img/LionDancePrep.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
+                            <div class="position-relative tm-thumbnail-container" style="border-radius: 20px 20px 0 0;">
+                                <img src="img/Misc.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
                                 <a href="video-page.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>
-                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Lion Dance Preparation</h3>
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description" style="border-radius: 0 0 20px 20px;">
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Full Event Montage</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-                            <div class="position-relative tm-thumbnail-container">
+                            <div class="position-relative tm-thumbnail-container" style="border-radius: 20px 20px 0 0;">
                                 <img src="img/LD.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
                                 <a href="video-page-1.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>
-                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description" style="border-radius: 0 0 20px 20px;">
                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Lion Dance</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-                            <div class="position-relative tm-thumbnail-container">
+                            <div class="position-relative tm-thumbnail-container" style="border-radius: 20px 20px 0 0;">
                                 <img src="img/LOHEI.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
                                 <a href="video-page-2.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>
-                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description" style="border-radius: 0 0 20px 20px;">
                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Lo Hei Celebration</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-                            <div class="position-relative tm-thumbnail-container">
+                            <div class="position-relative tm-thumbnail-container" style="border-radius: 20px 20px 0 0;">
                                 <img src="img/Montage.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
                                 <a href="video-page-3.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>
-                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Full Event Montage</h3>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-                            <div class="position-relative tm-thumbnail-container">
-                                <img src="img/Misc.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
-                                <a href="video-page-4.html" class="position-absolute tm-img-overlay" target="_blank">
-                                    <i class="fas fa-play tm-overlay-icon"></i>
-                                </a>
-                            </div>
-                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Miscellaneous</h3>
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description" style="border-radius: 0 0 20px 20px;">
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Extra Shots</h3>
                             </div>
                         </div>
                     </div>
