--- a/video-page-1.html
+++ b/video-page-1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNY 2023 - Video</title>
+    <title>CNY 2024 - Video</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
@@ -17,63 +17,43 @@ TemplateMo 552 Video Catalog
 https://templatemo.com/tm-552-video-catalog
 
 -->
-<body>
+<body style="background-color: #f8001a; position: relative;" >
+    <img src="img/header.png" alt="Header" style="max-width: 100%; position: fixed; z-index: -1;">
+    
 	<div class="tm-page-wrap mx-auto">
-		<div class="position-relative">
-			<div class="potition-absolute tm-site-header">
-				<div class="container-fluid position-relative">
-					<div class="row">						
-                        <div class="col-5 col-md-8 ml-auto mr-0">
-                            <div class="tm-site-nav">
-                                <nav class="navbar navbar-expand-lg mr-0 ml-auto" id="tm-main-nav">
-                                    <button class="navbar-toggler tm-bg-black py-2 px-3 mr-0 ml-auto collapsed" type="button"
-                                        data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbar-nav"
-                                        aria-expanded="false" aria-label="Toggle navigation">
-                                        <span>
-                                            <i class="fas fa-bars tm-menu-closed-icon"></i>
-                                            <i class="fas fa-times tm-menu-opened-icon"></i>
-                                        </span>
-                                    </button>
-                                    <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                                        <ul class="navbar-nav text-uppercase">
-                                            <li class="nav-item active">
-                                                <a class="nav-link tm-nav-link" href="index.html" style="text-shadow: 2px 2px black;">Videos <span class="sr-only">(current)</span></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="photo.html" style="text-shadow: 2px 2px black;">Photos</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </nav>
-                            </div>
-                        </div>
-					</div>
-				</div>
-			</div>
-			<div class="tm-welcome-container tm-fixed-header tm-fixed-header-1">
+        <div class="position-relative">
+            <div class="tm-site-header" id="site-header" style="position: fixed; top: 0px; transition: top 0.3s;">
+                <ul class="text-uppercase">
+                    <li class="active" style="display: inline-block;">
+                        <a class="nav-link tm-nav-link" href="index.html">Videos <span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li style="display: inline-block;">
+                        <a class="nav-link tm-nav-link" href="photo.html">Photos</a>
+                    </li>
+                </ul>
+                    </div>
+            </div>
+            <div class="tm-welcome-container tm-fixed-header tm-fixed-header-2">
             </div>
 
-			<!-- Header image -->
-            <div id="tm-fixed-header-bg"></div> 
-		</div>
+            <div id="tm-fixed-header-bg"></div> <!-- Header image -->
+        </div>
 
 		<!-- Page content -->
 		<div class="container-fluid">
-			<div class="mx-auto tm-content-container">
 				<main>
-					<div style="width: 80%; height: 800px; float: none; clear: both; margin: 2px auto;">
-						<embed src="https://www.youtube.com/embed/BRWydXO_7GI?autohide=1&autoplay=1" wmode="transparent"
+					<div style="width: 80%; height: 100vh; float: none; clear: both; margin: 2px auto;">
+						<embed src="https://www.youtube.com/embed/8uOOSgjOB74?autohide=1&autoplay=1" wmode="transparent"
 							type="video/mp4" width="100%" height="100%" allow="autoplay; encrypted-media; picture-in-picture"
-							allowfullscreen title="Keyboard Cat">
+							allowfullscreen>
 					</div>
 				</main>
 		
-				<footer class="row pt-5">
-					<div class="col-12">
-                        <p class="text-right"> © 2023 Celestica Inc. </p>
-					</div>
-				</footer>
-			</div> <!-- .tm-content-container -->
+            <footer style="margin: 0;">
+                <img src="img/footer.png" alt="Image" style="max-height: 100%; max-width: 100%; ">
+                    <p style="color: whitesmoke; position: absolute; bottom: 0; right: 10px;"> © Copyright Celestica Inc. 2024. All rights reserved. </p>
+            </footer>
 		</div>
 		</div>
 
@@ -82,6 +62,25 @@ https://templatemo.com/tm-552-video-catalog
     <script>
         $(document).ready(function () {
 $(this).scrollTop(450);
+        });
+    </script>
+    <script>
+        let prevScrollPos = window.pageYOffset;
+
+        window.addEventListener('scroll', function () {
+            // current scroll position
+            const currentScrollPos = window.pageYOffset;
+
+            if (prevScrollPos > currentScrollPos) {
+                // user has scrolled up
+                document.getElementById("site-header").style.top = "0";
+            } else {
+                // user has scrolled down
+                document.getElementById("site-header").style.top = "-100px";
+            }
+
+            // update previous scroll position
+            prevScrollPos = currentScrollPos;
         });
     </script>
 </body>
