--- a/video-page-3.html
+++ b/video-page-3.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-552-video-catalog
 		<!-- Page content -->
 		<div class="container-fluid">
 				<main>
-					<div style="width: 80%; height: 800px; float: none; clear: both; margin: 2px auto;">
+					<div style="width: 80%; height: 100vh; float: none; clear: both; margin: 2px auto;">
 						<embed src="https://www.youtube.com/embed/8uOOSgjOB74?autohide=1&autoplay=1" wmode="transparent"
 							type="video/mp4" width="100%" height="100%" allow="autoplay; encrypted-media; picture-in-picture"
 							allowfullscreen>
@@ -62,6 +62,25 @@ https://templatemo.com/tm-552-video-catalog
     <script>
         $(document).ready(function () {
 $(this).scrollTop(450);
+        });
+    </script>
+    <script>
+        let prevScrollPos = window.pageYOffset;
+
+        window.addEventListener('scroll', function () {
+            // current scroll position
+            const currentScrollPos = window.pageYOffset;
+
+            if (prevScrollPos > currentScrollPos) {
+                // user has scrolled up
+                document.getElementById("site-header").style.top = "0";
+            } else {
+                // user has scrolled down
+                document.getElementById("site-header").style.top = "-100px";
+            }
+
+            // update previous scroll position
+            prevScrollPos = currentScrollPos;
         });
     </script>
 </body>
