--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@ https://templatemo.com/tm-552-video-catalog
                                 </a>
                             </div>
                             <div class="p-4 tm-bg-gray tm-catalog-item-description" style="border-radius: 0 0 20px 20px;">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Full Event Montage</h3>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Full Event Video</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container" style="border-radius: 20px 20px 0 0;">
-                                <img src="img/Montage.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
+                                <img src="img/LOHEI.jpg" alt="Image" class="img-fluid tm-catalog-item-img">
                                 <a href="video-page-3.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>
                             <div class="p-4 tm-bg-gray tm-catalog-item-description" style="border-radius: 0 0 20px 20px;">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Extra Shots</h3>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Event Montage</h3>
                             </div>
                         </div>
                     </div>
