change video content again

--- a/video-page.html
+++ b/video-page.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-552-video-catalog
 		<div class="container-fluid">
 				<main>
 					<div style="width: 80%; height: 100vh; float: none; clear: both; margin: 2px auto;">
-						<embed src="https://www.youtube.com/embed/9yldqZG-SF0?autohide=1&autoplay=1" wmode="transparent"
+						<embed src="https://www.youtube.com/embed/J6Fw6RV_OjQ?autohide=1&autoplay=1" wmode="transparent"
 							type="video/mp4" width="100%" height="100%" allow="autoplay; encrypted-media; picture-in-picture"
 							allowfullscreen>
 					</div>
